[package]
name = "bip39-bruteforce"
version = "0.1.0"
edition = "2021"

[dependencies]
ocl = "0.20" # OpenCL library for GPU computation
rayon = "1.7" # Parallel processing
bitcoin-wallet = "0.32" # For BIP39 mnemonic handling
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0" # For JSON manipulation
hex = "0.4" # For hex encoding/decoding
log = "0.4" # For logging
simple_logger = "1.16" # Simple logger for debugging